--- a/lab/job-winner/chart/templates/backend-configmap.yaml
+++ b/lab/job-winner/chart/templates/backend-configmap.yaml
@@ -5,5 +5,5 @@ metadata:
 data:
   SPRING_PROFILES_ACTIVE: demo
   UI_PATH: https://{{ .Values.ingress.hostname }}/jobwinner
-  SERVER_PORT: 8080
+  SERVER_PORT: "8080"
   
