--- a/lab/job-winner/chart/templates/ingress.yaml
+++ b/lab/job-winner/chart/templates/ingress.yaml
@@ -19,6 +19,7 @@ spec:
               service:
                 name: {{ .Values.name }}-backend
                 port:
+                  number: {{ .Values.ingress.backendServicePort }}
           - path: {{ .Values.ingress.path }}
             pathType: {{ .Values.ingress.pathType }}
             backend:
