--- a/lab/job-winner/chart/templates/ingress.yaml
+++ b/lab/job-winner/chart/templates/ingress.yaml
@@ -17,6 +17,6 @@ spec:
             pathType: {{ .Values.ingress.pathType }}
             backend:
               service:
-                name: {{ .Values.name }}-frontend
+                name: {{ include "app.name" . }}-frontend
                 port:
                   number: {{ .Values.ingress.servicePort }}
