--- a/lab/job-winner/chart/templates/backend-deploy.yaml
+++ b/lab/job-winner/chart/templates/backend-deploy.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.name }}-backend
+  name: {{ include "app.name" . }}-backend
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.name }}-backend
+    app: {{ include "app.name" . }}-backend
 spec:
   replicas: {{ .Values.replicaCount }}
   revisionHistoryLimit: {{ .Values.backend.revisionHistoryLimit }}
   selector:
     matchLabels:
-      app: {{ .Values.name }}-backend
+      app: {{ include "app.name" . }}-backend
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}-backend
+        app: {{ include "app.name" . }}-backend
     spec:
       {{- if .Values.backend.persistence }}
       securityContext:
