--- a/lab/job-winner/chart/templates/backend-service.yaml
+++ b/lab/job-winner/chart/templates/backend-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}-backend
+  name: {{ include "app.name" . }}-backend
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.name }}-backend
+    app: {{ include "app.name" . }}-backend
 spec:
   selector:
-    app: {{ .Values.name }}-backend
+    app: {{ include "app.name" . }}-backend
   ports:
 {{- range .Values.backend.service.ports }}
     - name: {{ .name }}
