--- a/lab/job-winner/chart/templates/frontend-service.yaml
+++ b/lab/job-winner/chart/templates/frontend-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}-frontend
+  name: {{ include "app.name" . }}-frontend
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ .Values.name }}-frontend
+    app: {{ include "app.name" . }}-frontend
 spec:
   selector:
-    app: {{ .Values.name }}-frontend
+    app: {{ include "app.name" . }}-frontend
   ports:
 {{- range .Values.frontend.service.ports }}
     - name: {{ .name }}
