--- a/lab/job-winner/chart/values.yaml
+++ b/lab/job-winner/chart/values.yaml
@@ -6,15 +6,15 @@ imagePullSecrets:
 
 frontend:
   image:
-    repository: ghcr.io/januschung/job-winner-ui
-    tag: 9ebcc04
+    repository: ghcr.io/januschung/observation-bay
+    tag: 0.0.5
   revisionHistoryLimit: 5
   service:
     type: ClusterIP
     ports:
       - name: http
         port: 80
-        targetPort: 80
+        targetPort: 8080
   secret: {}
   configMap: 
     name: job-winner-frontend
@@ -57,7 +57,7 @@ ingress:
   enabled: true
   ingressClassName: traefik
   hostname: janusc.duckdns.org
-  path: /
+  path: /jobwinner
   pathType: Prefix
   servicePort: 80
   backendPath: /jobwinner/graphql
