--- a/lab/observation-bay/chart/values.yaml
+++ b/lab/observation-bay/chart/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
-  repository: ghcr.io/januschung/observation-bay
-  tag: 0.0.5
+  repository: ghcr.io/januschung/jobwinner-ui
+  tag: 9ebcc04
 imagePullSecrets:
   - name: ghcr-token
 resources:
@@ -17,12 +17,12 @@ service:
   ports:
     - name: http
       port: 80
-      targetPort: 8000
+      targetPort: 80
 ingress:
   enabled: true
   ingressClassName: traefik
   hostname: janusc.duckdns.org
-  path: /ob
+  path: /jobwinner
   pathType: Prefix
   servicePort: 80
   annotations:
