--- a/lab/job-winner/chart/values.yaml
+++ b/lab/job-winner/chart/values.yaml
@@ -57,7 +57,7 @@ ingress:
   enabled: true
   ingressClassName: traefik
   hostname: janusc.duckdns.org
-  path: /
+  path: /jobwinner
   pathType: Prefix
   servicePort: 80
   backendPath: /graphql
