--- a/lab/observation-bay/chart/values.yaml
+++ b/lab/observation-bay/chart/values.yaml
@@ -22,7 +22,7 @@ ingress:
   enabled: true
   ingressClassName: traefik
   hostname: janusc.duckdns.org
-  path: /jobwinner
+  path: /
   pathType: Prefix
   servicePort: 80
   annotations:
