--- a/lab/job-winner/chart/values.yaml
+++ b/lab/job-winner/chart/values.yaml
@@ -1,20 +1,15 @@
 replicaCount: 1
-
-name: job-winner
-imagePullSecrets:
-  - name: ghcr-token
-
 frontend:
   image:
-    repository: ghcr.io/januschung/observation-bay
-    tag: 0.0.5
+    repository: ghcr.io/januschung/job-winner-ui
+    tag: 9ebcc04
   revisionHistoryLimit: 5
   service:
     type: ClusterIP
     ports:
       - name: http
         port: 80
-        targetPort: 8000
+        targetPort: 80
   secret: {}
   configMap: 
     name: job-winner-frontend
