fix backend deployment

--- a/lab/job-winner/chart/templates/backend-deploy.yaml
+++ b/lab/job-winner/chart/templates/backend-deploy.yaml
@@ -25,7 +25,7 @@ spec:
         - name: {{ .name }}
         {{- end }}
       containers:
-        - name: {{ .Values.name }}-backend
+        - name: {{ include "app.name" . }}-backend
           image: {{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}
           ports:
           {{- range .Values.backend.service.ports }}
