--- a/lab/job-winner/chart/templates/backend-deploy.yaml
+++ b/lab/job-winner/chart/templates/backend-deploy.yaml
@@ -21,7 +21,7 @@ spec:
         fsGroup: 65532
       {{- end }}
       imagePullSecrets:
-        {{- range .Values.imagePullSecrets }}
+        {{- range .Values.backend.imagePullSecrets }}
         - name: {{ .name }}
         {{- end }}
       containers:
