--- a/lab/aal/chart/templates/frontend-deploy.yaml
+++ b/lab/aal/chart/templates/frontend-deploy.yaml
@@ -21,7 +21,7 @@ spec:
         fsGroup: 65532
       {{- end }}
       imagePullSecrets:
-        {{- range .Values.imagePullSecrets }}
+        {{- range .Values.frontend.imagePullSecrets }}
         - name: {{ .name }}
         {{- end }}
       containers:
