add middleware to strip api prefix

--- a/lab/aal/chart/values.yaml
+++ b/lab/aal/chart/values.yaml
@@ -66,3 +66,4 @@ ingress:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
     traefik.ingress.kubernetes.io/router.tls.certresolver: le
+    traefik.ingress.kubernetes.io/router.middlewares: aal-strip-api@kubernetescrd
