--- a/infra/monitoring/loki/application.yaml
+++ b/infra/monitoring/loki/application.yaml
@@ -5,13 +5,16 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: https://grafana.github.io/helm-charts
-    targetRevision: 6.49.0
-    chart: loki
-    helm:
-      valueFiles:
-        - values.yaml
+  sources:
+    - repoURL: https://grafana.github.io/helm-charts
+      targetRevision: 6.49.0
+      chart: loki
+    - repoURL: https://github.com/januschung/argocd
+      targetRevision: main
+      ref: values
+  helm:
+    valueFiles:
+      - $values/infra/monitoring/loki/values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
