--- a/infra/monitoring/prometheus-grafana/application.yaml
+++ b/infra/monitoring/prometheus-grafana/application.yaml
@@ -5,13 +5,16 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 80.4.1
-    chart: kube-prometheus-stack
-    helm:
-      valueFiles:
-        - values.yaml
+  sources:
+    - repoURL: https://prometheus-community.github.io/helm-charts
+      targetRevision: 80.4.1
+      chart: kube-prometheus-stack
+    - repoURL: https://github.com/januschung/argocd
+      targetRevision: main
+      ref: values
+  helm:
+    valueFiles:
+      - $values/infra/monitoring/prometheus-grafana/values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
