add job winner dashboard

--- a/infra/monitoring/prometheus-grafana/values.yaml
+++ b/infra/monitoring/prometheus-grafana/values.yaml
@@ -117,15 +117,96 @@ grafana:
           editable: true
           options:
             path: /var/lib/grafana/dashboards/application-logs
-  dashboards:
+dashboards:
     application-logs:
-      # Loki & Promtail - Logs and Performance (Popular general purpose dashboard)
+      # Existing dashboards from Grafana.com
       loki-logs-performance:
         gnetId: 13639
         revision: 1
         datasource: Loki
-      # Logs Explorer - Advanced log exploration
       logs-explorer:
         gnetId: 15107
         revision: 1
         datasource: Loki
+      job-winner-dashboard:
+        datasource: 
+          - name: DS_PROMETHEUS
+            value: Prometheus
+          - name: DS_LOKI
+            value: Loki
+        json: |
+          {
+            "annotations": {
+              "list": [
+                {
+                  "builtIn": 1,
+                  "datasource": { "type": "grafana", "uid": "-- Grafana --" },
+                  "enable": true,
+                  "hide": true,
+                  "name": "Annotations & Alerts",
+                  "type": "dashboard"
+                }
+              ]
+            },
+            "editable": true,
+            "fiscalYearStartMonth": 0,
+            "graphTooltip": 0,
+            "id": null,
+            "links": [],
+            "panels": [
+              {
+                "datasource": { "type": "prometheus", "uid": "${DS_PROMETHEUS}" },
+                "fieldConfig": { "defaults": { "color": { "mode": "palette-classic" }, "thresholds": { "mode": "absolute", "steps": [{ "color": "green", "value": 0 }, { "color": "red", "value": 80 }] } }, "overrides": [] },
+                "gridPos": { "h": 8, "w": 12, "x": 0, "y": 0 },
+                "id": 2,
+                "targets": [
+                  {
+                    "datasource": { "type": "prometheus", "uid": "${DS_PROMETHEUS}" },
+                    "expr": "sum by (pod) (rate(container_cpu_usage_seconds_total{namespace=\"job-winner\", container!=\"\"}[5m])) / sum by (pod) (kube_pod_container_resource_requests{namespace=\"job-winner\", resource=\"cpu\"}) * 100",
+                    "refId": "A"
+                  }
+                ],
+                "title": "CPU",
+                "type": "timeseries"
+              },
+              {
+                "datasource": { "type": "prometheus", "uid": "${DS_PROMETHEUS}" },
+                "gridPos": { "h": 8, "w": 12, "x": 12, "y": 0 },
+                "id": 3,
+                "targets": [
+                  {
+                    "datasource": { "type": "prometheus", "uid": "${DS_PROMETHEUS}" },
+                    "expr": "sum by (pod) (container_memory_working_set_bytes{namespace=\"job-winner\", container!=\"\"}) / 1024 / 1024",
+                    "refId": "A"
+                  }
+                ],
+                "title": "Memory",
+                "type": "timeseries"
+              },
+              {
+                "datasource": { "type": "loki", "uid": "${DS_LOKI}" },
+                "gridPos": { "h": 22, "w": 24, "x": 0, "y": 8 },
+                "id": 1,
+                "options": { "enableLogDetails": true, "sortOrder": "Descending" },
+                "targets": [
+                  {
+                    "datasource": { "type": "loki", "uid": "${DS_LOKI}" },
+                    "expr": "{service_name=\"job-winner-backend\"} | regexp `(?P<time>\\S+)\\s+(?P<level>[A-Z]+)\\s+.*:\\s+(?P<msg>.*)` | line_format \"{{.time}} [{{.level}}] - {{.msg}}\" | level=~\"$level\" |~ \"(?i)$search\"",
+                    "refId": "A"
+                  }
+                ],
+                "title": "Backend",
+                "type": "logs"
+              }
+            ],
+            "schemaVersion": 42,
+            "templating": {
+              "list": [
+                { "label": "log level", "name": "level", "options": [ { "selected": true, "text": "INFO", "value": "INFO" }, { "text": "WARN", "value": "WARN" }, { "text": "ERROR", "value": "ERROR" } ], "query": "INFO, WARN, ERROR", "type": "custom" },
+                { "label": "Search Logs", "name": "search", "query": "", "type": "textbox" }
+              ]
+            },
+            "title": "Job Winner",
+            "uid": "job-winner-dash",
+            "version": 1
+          }
