silent all fe logs

--- a/lab/observation-bay/chart/templates/deploy.yaml
+++ b/lab/observation-bay/chart/templates/deploy.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ include "app.name" . }}
+  annotations:
+    prometheus.io/scrape: "false"
 spec:
   replicas: {{ .Values.replicaCount }}
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
