--- a/infra/monitoring/prometheus-grafana/values.yaml
+++ b/infra/monitoring/prometheus-grafana/values.yaml
@@ -155,13 +155,13 @@ grafana:
             "links": [],
             "panels": [
               {
-                "datasource": { "type": "prometheus", "uid": "${DS_PROMETHEUS}" },
+                "datasource": { "type": "prometheus", "uid": "prometheus" },
                 "fieldConfig": { "defaults": { "color": { "mode": "palette-classic" }, "thresholds": { "mode": "absolute", "steps": [{ "color": "green", "value": 0 }, { "color": "red", "value": 80 }] } }, "overrides": [] },
                 "gridPos": { "h": 8, "w": 12, "x": 0, "y": 0 },
                 "id": 2,
                 "targets": [
                   {
-                    "datasource": { "type": "prometheus", "uid": "${DS_PROMETHEUS}" },
+                    "datasource": { "type": "prometheus", "uid": "prometheus" },
                     "expr": "sum by (pod) (rate(container_cpu_usage_seconds_total{namespace=\"job-winner\", container!=\"\"}[5m])) / sum by (pod) (kube_pod_container_resource_requests{namespace=\"job-winner\", resource=\"cpu\"}) * 100",
                     "refId": "A"
                   }
@@ -170,12 +170,12 @@ grafana:
                 "type": "timeseries"
               },
               {
-                "datasource": { "type": "prometheus", "uid": "${DS_PROMETHEUS}" },
+                "datasource": { "type": "prometheus", "uid": "prometheus" },
                 "gridPos": { "h": 8, "w": 12, "x": 12, "y": 0 },
                 "id": 3,
                 "targets": [
                   {
-                    "datasource": { "type": "prometheus", "uid": "${DS_PROMETHEUS}" },
+                    "datasource": { "type": "prometheus", "uid": "prometheus" },
                     "expr": "sum by (pod) (container_memory_working_set_bytes{namespace=\"job-winner\", container!=\"\"}) / 1024 / 1024",
                     "refId": "A"
                   }
@@ -184,13 +184,13 @@ grafana:
                 "type": "timeseries"
               },
               {
-                "datasource": { "type": "loki", "uid": "${DS_LOKI}" },
+                "datasource": { "type": "loki", "uid": "loki" },
                 "gridPos": { "h": 22, "w": 24, "x": 0, "y": 8 },
                 "id": 1,
                 "options": { "enableLogDetails": true, "sortOrder": "Descending" },
                 "targets": [
                   {
-                    "datasource": { "type": "loki", "uid": "${DS_LOKI}" },
+                    "datasource": { "type": "loki", "uid": "loki" },
                     "expr": "{service_name=\"job-winner-backend\"} | regexp `(?P<time>\\S+)\\s+(?P<level>[A-Z]+)\\s+.*:\\s+(?P<msg>.*)` | line_format \"{{.time}} [{{.level}}] - {{.msg}}\" | level=~\"$level\" |~ \"(?i)$search\"",
                     "refId": "A"
                   }
